[gd_scene load_steps=6 format=3 uid="uid://boiuapic68xir"]

[ext_resource type="Script" path="res://ui/screen_gui/screen_gui.gd" id="1_e1q16"]
[ext_resource type="Texture2D" uid="uid://bw5kbi8nr30xk" path="res://assets/icons/power-lightning.svg" id="1_ulybx"]
[ext_resource type="Texture2D" uid="uid://cknxl30pltbub" path="res://assets/icons/thunder-skull.svg" id="2_h648y"]
[ext_resource type="Texture2D" uid="uid://b4a6rvf3px1lc" path="res://assets/icons/electric.svg" id="2_stuvd"]
[ext_resource type="Texture2D" uid="uid://d36y4k2vsglcx" path="res://assets/icons/heavy-lightning.svg" id="4_ng3o6"]

[node name="ScreenGUI" type="Control" node_paths=PackedStringArray("subject_strike_icons", "player_strike_icons")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_e1q16")
subject_strike_icons = [NodePath("TopHBoxContainer/SubjectStrikesHBoxContainer/TextureRect3"), NodePath("TopHBoxContainer/SubjectStrikesHBoxContainer/TextureRect2"), NodePath("TopHBoxContainer/SubjectStrikesHBoxContainer/TextureRect"), NodePath("TopHBoxContainer/SubjectStrikesHBoxContainer/TextureRect4")]
player_strike_icons = [NodePath("TopHBoxContainer/PlayerStrikesHBoxContainer/TextureRect"), NodePath("TopHBoxContainer/PlayerStrikesHBoxContainer/TextureRect2"), NodePath("TopHBoxContainer/PlayerStrikesHBoxContainer/TextureRect3"), NodePath("TopHBoxContainer/PlayerStrikesHBoxContainer/TextureRect4")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -248.0
offset_top = 53.0
offset_right = 247.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 2

[node name="ChatVBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -84.715
offset_right = -9.0
offset_bottom = -7.71448
grow_horizontal = 2
grow_vertical = 0

[node name="LineEdit" type="LineEdit" parent="InputVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
max_length = 8
context_menu_enabled = false
caret_blink = true
caret_force_displayed = true
caret_mid_grapheme = true

[node name="HBoxContainer" type="HBoxContainer" parent="InputVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PauseButton" type="Button" parent="InputVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Pause Experiment"

[node name="EnterButton" type="Button" parent="InputVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Enter"

[node name="TopHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 7.0
offset_right = -9.0
offset_bottom = 51.0
grow_horizontal = 2

[node name="PlayerStrikesHBoxContainer" type="HBoxContainer" parent="TopHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="TopHBoxContainer/PlayerStrikesHBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_stuvd")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="TopHBoxContainer/PlayerStrikesHBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_ulybx")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="TopHBoxContainer/PlayerStrikesHBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_ng3o6")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="TopHBoxContainer/PlayerStrikesHBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_h648y")
expand_mode = 2

[node name="TimerLabel" type="Label" parent="TopHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "0.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubjectStrikesHBoxContainer" type="HBoxContainer" parent="TopHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="TextureRect4" type="TextureRect" parent="TopHBoxContainer/SubjectStrikesHBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_h648y")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="TopHBoxContainer/SubjectStrikesHBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_ng3o6")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="TopHBoxContainer/SubjectStrikesHBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("1_ulybx")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="TopHBoxContainer/SubjectStrikesHBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_stuvd")
expand_mode = 2

[connection signal="text_submitted" from="InputVBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="InputVBoxContainer/HBoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="InputVBoxContainer/HBoxContainer/EnterButton" to="." method="_on_enter_button_pressed"]
